# expert-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  expert-e2e.yml  release-please.yml
backend/app/: __init__.py  main.py  schema.py
backend/app/docs/: sync.py
backend/app/llm/: factory.py  gemini_ai_studio.py
backend/tests/: test_llm_protocol.py  test_schema.py
cli/agent_cli/: __init__.py  config.py  main.py  ui.py
cli/agent_cli/commands/: __init__.py  ask.py  count_tokens.py  init.py  sessions.py  sync.py  validate.py
cli/expert/: __init__.py  brand.py  context.py  main.py  ui.py  workspace.py
cli/expert/commands/: agents.py  ask.py  count_tokens.py  init.py  sessions.py  sync.py  test.py  validate.py
cli/expert/testkit/: ExpertLibrary.py
cli/expert/testkit/suites/: 03_update.robot
cli/tests/: test_ask_streaming.py  test_brand.py  test_count_tokens.py  test_init.py  test_main_alias.py  test_validate.py  test_workspace.py
docs/: AGENT_E2E_SETUP.md  PRIVATE_AGENT_REPO.md
docs/rfc/: google-drive-connector.md
example-schema/: agent_schema.yaml
example-schema/prompts/: identity.md
infra/agent/: cloud_run.tf  terraform.tfvars.example  variables.tf
scripts/: bootstrap-project.sh
